<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_ip"
        android:title="@string/add_by_ip"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tile"
        android:title="@string/menu_tile"
        android:icon="@drawable/ic_tile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_timers"
        android:title="@string/menu_timers"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_energy"
        android:title="@string/menu_energy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_monitor"
        android:title="@string/menu_monitor"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_groups"
        android:title="@string/menu_groups"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_geofence"
        android:title="@string/menu_geofence"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_accounts"
        android:title="@string/menu_accounts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_voice"
        android:title="@string/menu_voice"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:title="@string/menu_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
